# gpio-monitor

./: .gitignore  meson.build
config/: gpio-monitor.json
service_files/: gpio-monitor.service
src/: gpioMon.cpp  gpioMon.hpp  gpioMonMain.cpp
